--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <p class="lead">Code is so interesting because simple linear sequences of characters
       express rich non-linear structures (like trees) and arbitrary information
       (like comments). Humans are very creative, and have developed a variety of
-      ways to order these varying characters to mean different things. For
+      ways to order these characters to mean different things. For
       example, C-like comments can start with <code class="hl-bg-source">//</code> but Python-like
       comments use <code class="hl-bg-source">#</code>. Problematically, we use the same characters to
       mean different things across languages and in different contexts: a
@@ -145,7 +145,7 @@
       string like <code class="hl-bg-source">"#"</code>. Or it could be a meaningless character inside a
       C comment like <code class="hl-bg-source">\\ #</code>. Yet at some level, a choice of characters in
       all languages correspond to similar underlying structures or information:
-      most languages have comments, and balanced delimiters like parentheses
+      most languages have comments and balanced delimiters like parentheses
       <code class="hl-bg-source">()</code> or braces <code class="hl-bg-source">{}</code> nest expressions, as found in typical
       if-statements. The key idea in Comby is to match code that respects the
       basics of this richer structure on a per-language basis, and not (only) as
@@ -360,7 +360,7 @@
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Let's change the code above and make it a little more interesting.
-        Suppose it was Javascript:</p>
+        Suppose it was this Javascript:</p>
 </div>
 </div>
 
