add under construction' in case people stumble upon it

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <!-- Masthead Avatar Image -->
         <!--<img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">-->
 
+        <h1><i class="fas fa-exclamation-triangle"></i>Site Under Construction<i class="fas fa-exclamation-triangle"></i></h1>
         <!-- Masthead Heading -->
         <h1 class="masthead-heading text-uppercase mb-0">Comby</h1>
+
 
         <!-- Line -->
         <div class="divider-line"></div>
