--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon/">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142487942-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-142487942-1');
+    </script>
 
   </head>
 
