--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Using <code><span class="hole">:[hole]</span></code> inside string quotes will match only within the string
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i></code>
+        Using <code><span class="hole">:[hole]</span></code> inside string quotes will match only within the string
         (for most languages). Comby also understands the difference between
         escapable string literals (like <code class="hl-bg-source">"</code>string<code class="hl-bg-source">"</code> in C) and raw
         string literals like <code class="hl-bg-source">`</code>string<code class="hl-bg-source">`</code> in Go, and will know to
@@ -448,7 +449,8 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Use <code style="color:orange">:[[hole]]</code> to match only alphanumeric and
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i></code>
+        Use <code style="color:orange">:[[hole]]</code> to match only alphanumeric and
         underscore characters. This hole does not match across newlines or
         punctuation.<sup><a href="https://bit.ly/2WUhPCa" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></sup></p>
 </div>
@@ -456,7 +458,8 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">You can refer to the same variable using either
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i></code>
+        You can refer to the same variable using either
         <code style="color:orange">:[[hole]]</code> or <code><span class="hole">:[hole]</span></code> in the rewrite template.
         <sup><a href="https://bit.ly/2ZAQZR0" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></sup></p>
 </div>
@@ -464,7 +467,8 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">You almost never want to start a template with <code><span class="hole">:[hole]</span></code>, since it
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i></code>
+        You almost never want to start a template with <code><span class="hole">:[hole]</span></code>, since it
         matches everything including newlines up to its suffix. This can make
         things slow. <code><span class="hole">:[hole]</span></code> is typically useful inside balanced delimiters.<sup><a href="https://bit.ly/2WVDzh7" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></sup></p>
 </div>
@@ -472,7 +476,8 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Want more inspiration? Check out these simple code rewrites<sup><a href="https://catalogue.comby.dev/" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a>.</p>
+<p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i></code>
+        Want more inspiration? Check out these simple code rewrites.<sup><a href="https://catalog.comby.dev/" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></p>
 </div>
 </div>
 
