--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
-  <a href="#what-about-python"><i class="fas fa-link anchor-side-link"></i><h6 id="what-about-python">What about indentation-sensitive langouages?</h6>
+  <a href="#what-about-python"><i class="fas fa-link anchor-side-link"></i><h6 id="what-about-python">What about indentation-sensitive languages?</h6>
   </a>
 </div>
 </div>
