--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">All the examples on comby.live and in the catalog are just a copy away
+<p class="lead">All the examples on <a href="https://comby.live" class="inline-a">comby.live</a> and in the <a href="https://catalog.comby.dev" class="inline-a">catalog</a> are just a copy away
       from working on your command-line (just click on terminal). Install:</p>
 </div>
 </div>
