--- a/index.html
+++ b/index.html
@@ -918,8 +918,8 @@
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Note: Comby cannot recognize arbitrary matching tags like <code>&lt;foo&gt;...&lt;/foo&gt;</code>
-      in HTML or XML yet (we do have plans to support it soon). Matching inside angle
-      brackets <code><...></code> is OK though.</p>
+      in HTML or XML yet (we do have plans to support it soon). Matching within angle
+      brackets <code><...></code> works.</p>
 </div>
 </div>
 
