--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Note: Comby is not well-suited to stylistic changes and formatting like
       "insert a line break after 80 characters". Pair Comby with a
-      language-specific formatter to perserve formatting (like <code>gofmt</code> for the
+      language-specific formatter to preserve formatting (like <code>gofmt</code> for the
       Go language) after performing a change.</p>
 </div>
 </div>.
