--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Note that languages can currently be added and expanded with respect
-      to <i>syntactic</i> code strctures that Comby recognizes: balanced
+      to <i>syntactic</i> code structures that Comby recognizes: balanced
       delimiters, comments, and kinds of string literals. By design, it isn't
       possible to further refine the meaning of syntax into keywords or
       high-level structures like functions.</p>
