--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           <!-- Live -->
           <div class="col-sm-2 panel-item">
-            <a href="https://comby.live/">
+            <a href="https://bit.ly/2UXkonD">
               <div class="mastpanel-item">
                 <div class="mastpanel-item-overlay h-100 w-100 fucksakes">
                   <img class="img-fluid" src="img/panel/code-inspector-ui-orange.svg" alt="">
@@ -417,7 +417,7 @@
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>var result = foo(bar(x <code style="color:#ea4f00">/* arg 1) */</code>)) + foobar(<code style="color:#ea4f00">"("</code>);</code></pre>
+<pre class="source"><code>var result = foo(bar(x <code style="color:#e2c211">/* arg 1) */</code>)) + foobar(<code style="color:#e2c211">"("</code>);</code></pre>
           </div>
         </div>
 
@@ -425,7 +425,7 @@
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Now there's quite a bit of complexity if we want to match the
         arguments of <code class="hl-bg-source">foo</code> and <code class="hl-bg-source">foobar</code>. A block comment
-        <code class="hl-bg-source"><code style="color:#ea4f00">/* arg 1) */</code></code> is inlined
+        <code class="hl-bg-source"><code style="color:#e2c211">/* arg 1) */</code></code> is inlined
         for <code class="hl-bg-source">bar</code>. Because this is a comment, it shouldn't matter whether
         the parenthesis inside are balanced or not. The same goes for the string
         literal argument to <code class="hl-bg-source">foobar</code>: it's not a parenthesis in the code.
@@ -574,7 +574,7 @@
 <p class="lead"><code style="color:orange"><i class="fas fa-lightbulb"></i>&nbsp;</code> Consider
         combinations of holes to match interesting properties. For example, to
         capture leading indentation of a line, use a template like <br><code style="color:orange">:[
-        leading_indentation]<code><span class="hole">:[everything_until_newline]</span></code></code>.<sup><a href="https://bit.ly/2XOpczz" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></sup></p>
+        leading_indentation]<code><span class="hole">:[everything_until_newline]</span></code></code>.<sup><a href="https://bit.ly/31uC6RE" target="_blank" style="color: orange; font-size: .75rem"><i class="fas fa-external-link-alt fa-fw"></i></a></sup></p>
 </div>
 </div>
 
@@ -588,7 +588,6 @@
 
         </div>
       </div>
-
 
   </section>
 
@@ -643,7 +642,7 @@
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2">
-<pre class="source"><code>where <code><span class="hole">:[left_side]</span></code> == <code><span class="hole">:[right_side]</span></code>, <code><span class="hole">:[left_side]</span></code> != <code style="color:#ea4f00">"x == 500"</code></code></pre>
+<pre class="source"><code>where <code><span class="hole">:[left_side]</span></code> == <code><span class="hole">:[right_side]</span></code>, <code><span class="hole">:[left_side]</span></code> != <code style="color:#e2c211">"x == 500"</code></code></pre>
 <div class="text-right link-border"><a href="https://bit.ly/2NaaCOy" target="_blank"><i class="fas fa-external-link-alt fa-fw"></i>Live example</a></div>
           </div>
         </div>
@@ -672,8 +671,8 @@
         <div class="row">
           <div class="col-sm-8 offset-sm-2">
 <pre class="source"><code>where match <code><span class="hole">:[left_side]</span></code> {
-      | <code style="color:#ea4f00">"x == 600"</code> -> false
-      | <code style="color:#ea4f00">"x == 500"</code> -> true
+      | <code style="color:#e2c211">"x == 600"</code> -> false
+      | <code style="color:#e2c211">"x == 500"</code> -> true
       }</code></pre>
 <div class="text-right link-border"><a href="https://bit.ly/2NaGjaK" target="_blank"><i class="fas fa-external-link-alt fa-fw"></i>Live example</a></div>
           </div>
@@ -688,12 +687,12 @@
         <div class="row">
           <div class="col-sm-8 offset-sm-2">
 <pre class="source"><code>where match <code><span class="hole">:[left_side]</span></code> {
-      | <code style="color:#ea4f00">"x == 500"</code> ->
+      | <code style="color:#e2c211">"x == 500"</code> ->
             match <code><span class="hole">:[right_side]</span></code> {
-            | <code style="color:#ea4f00">"x == 500"</code> -> true
-            | <code style="color:#ea4f00">"x == 600"</code> -> false
+            | <code style="color:#e2c211">"x == 500"</code> -> true
+            | <code style="color:#e2c211">"x == 600"</code> -> false
             }
-      | <code style="color:#ea4f00">"x == 600"</code> -> false
+      | <code style="color:#e2c211">"x == 600"</code> -> false
       }</code></pre>
                                                                     </div>
 </div>
@@ -714,26 +713,62 @@
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
+<p class="lead">The project is available on GitHub: <a href="https://github.com/comby-tools/comby" class="inline-a">https://github.com/comby-tools/comby</a>.</p>
+</div>
+</div>
+
+
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active mt-3">
+  <a href="#quick-install"><i class="fas fa-link anchor-side-link"></i><h6 id="quick-install">Command Line Install</h6>
+  </a>
+</div>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead"><code class="hl-bg-rewrite">bash <(curl -sL get.comby.dev)</code> (Binary for Ubuntu Linux and Mac)</p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead"><code class="hl-bg-rewrite">docker pull comby/comby</code> (Docker)</p>
+</div>
+</div>
+
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
 <p class="lead">All the examples on <a href="https://comby.live" class="inline-a">comby.live</a> and in the <a href="https://catalog.comby.dev" class="inline-a">catalog</a> are just a copy away
-      from working on your command-line (just click on terminal). Install:</p>
-</div>
-</div>
-
-      <div class="offset-sm-3"><div class="row">
-<div class="col-sm-8 offset-sm-2">
-<p class="lead"><code class="hl-bg-rewrite">bash <(curl -sL get.comby.dev)</code></p>
-</div>
-</div></div>
-
-      <div class="row">
-<div class="col-sm-8 offset-sm-2">
-<p class="lead">Here are some basics:</p>
+      from working on your command-line (just click on terminal).</p>
 </div>
 </div>
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Replace stdin using the generic matcher (highlighted diff preview)</code></p>
+<p class="lead"></p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active mt-3">
+  <a href="#quick-usage"><i class="fas fa-link anchor-side-link"></i><h6 id="quick-usage">Quick usage</h6>
+  </a>
+</div>
+</div>
+</div>
+
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead"></p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-stdin-generic"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-stdin-generic"><code style="color:orange">Replace stdin using the generic matcher (highlighted diff preview)</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -743,7 +778,7 @@
           </div>
         </div>
 
-<div class="row">
+        <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Output:</p>
 </div>
@@ -751,18 +786,26 @@
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="diff"><code><code style="color:#ea4f00">------ /dev/null</code>
+<pre class="diff"><code><code style="color:red">------ /dev/null</code>
 <code style="color:#13b313">++++++ /dev/null</code>
 <code style="color:gray">@|</code>-1,1 +1,1 ============================================================
-<code style="background-color:#ea4f00">-|</code><code style="color:#ea4f00">foo</code>(<code style="color:#ea4f00">a</code>, <code style="color:#ea4f00">b</code>)
+<code style="background-color:red">-|</code><code style="color:red">foo</code>(<code style="color:red">a</code>, <code style="color:red">b</code>)
 <code style="background-color:#13b313">+|</code><code style="color:#13b313">bar</code>(<code style="color:#13b313">b</code>, <code style="color:#13b313">a</code>)</code></pre>
 
           </div>
         </div>
 
-      <div class="row">
+        <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Highlighted diff preview for all go files in this directory and below</code></p>
+<p class="lead"></p>
+</div>
+</div>
+        <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-diff-go-highlight"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-diff-go-highlight"><code style="color:orange">Highlighted diff preview for all go files in this directory and below</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -772,9 +815,17 @@
           </div>
         </div>
 
-      <div class="row">
+        <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Replace <i>in place</i> for all go files in this directory and below</code></p>
+<p class="lead"></p>
+</div>
+</div>
+        <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-replace-go-in-place"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-replace-go-in-place"><code style="color:orange">Replace <i>in place</i> for all go files in this directory and below</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -786,7 +837,15 @@
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Diff preview replacement for files ending with file.go in directory foo</code></p>
+<p class="lead"></p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-diff-preview-with-directory"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-diff-preview-with-directory"><code style="color:orange">Diff preview replacement for files ending with file.go in directory foo</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -798,7 +857,15 @@
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Force using the Javascript matcher for all .txt files</code></p>
+<p class="lead"></p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-force-js-for-txt"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-force-js-for-txt"><code style="color:orange">Force using the Javascript matcher for all .txt files</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -808,10 +875,17 @@
           </div>
         </div>
 
-
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Use -diff to output a plain patch (unified diff)</code></p>
+<p class="lead"></p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#quick-diff-plain"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-diff-plain"><code style="color:orange">Use -diff to output a plain patch (unified diff)</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -841,7 +915,10 @@
 
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code style="color:orange">Use a directory of template patterns instead of the command line</code></p>
+<div class="anchor-header is-active">
+  <a href="#quick-template-directory"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="quick-template-directory"><code style="color:orange">Use a directory of template patterns instead of the command line</code></p>
+  </a>
+</div>
 </div>
 </div>
 
@@ -907,9 +984,9 @@
           <div class="col-sm-10 offset-sm-1 mb-3">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">Assembly, Bash, CSS, Clojure, C#, Dart, Elixir, Elm, Erlang,
-      Fortran, F#, Go, Haskell, HTML/XML, Java, Javascript/Typescript, JSON,
-      Julia, LaTeX, OCaml, Pascal, PHP, Python, Ruby, Rust, SQL, Scala, Swift</p>
+<p class="lead"><code>Assembly, Bash, C/C++, C#, Clojure, CSS, Dart, Elm, Elixir, Erlang,
+            Fortran, F#, Go, Haskell, HTML/XML, Java, Javascript/Typescript, JSON,
+            Julia, LaTeX, Lisp, OCaml, Pascal, PHP, Python, Ruby, Rust, Scala, SQL, Swift, Text</code></p>
 </div>
 </div>
           </div>
@@ -918,7 +995,7 @@
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Note: Comby cannot recognize arbitrary matching tags like <code>&lt;foo&gt;...&lt;/foo&gt;</code>
-      in HTML or XML yet (we do have plans to support it soon). Matching within angle
+      in HTML or XML yet (we do have plans to support it soon). Matching tags within angle
       brackets <code><...></code> works.</p>
 </div>
 </div>
@@ -934,7 +1011,7 @@
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Hopefully the language you're interested is already supported. If not,
-          you can define your own language in a simple JSON file and pass it as a custom matcher and rewriter. Just define the following supported language constructs in JSON, as follows:</p>
+          you can define your own language in a simple JSON file and pass it as a custom matcher. Just define the following supported language constructs in JSON, as follows:</p>
 </div>
 </div>
 
@@ -942,18 +1019,30 @@
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
 <pre class="source"><code>{
-  "user_defined_delimiters": [
-    [ "BLOCK-BEGIN", "BLOCK-END" ]
-    [ "if", "fi" ],
-  ],
-  "escapable_string_literals": [
-    [ "\"", "\"" ]
-  ],
-  "escape_char": "\\",
-  "raw_string_literals": [],
-  "comment_parser": [
-    [ "Until_newline", "#" ]
-  ]
+   <code style="color:#e2c211">"user_defined_delimiters"</code>:[
+      [
+         <code style="color:#e2c211">"case"</code>,
+         <code style="color:#e2c211">"esac"</code>
+      ]
+   ],
+   <code style="color:#e2c211">"escapable_string_literals"</code>:{
+      <code style="color:#e2c211">"delimiters"</code>:[
+         <code style="color:#e2c211">"\""</code>
+      ],
+      <code style="color:#e2c211">"escape_character"</code>:<code style="color:#e2c211">"\\"</code>
+   },
+   <code style="color:#e2c211">"raw_string_literals"</code>: [],
+   <code style="color:#e2c211">"comments"</code>:[
+      [
+         <code style="color:#e2c211">"Multiline"</code>,
+         <code style="color:#e2c211">"/*"</code>,
+         <code style="color:#e2c211">"*/"</code>
+      ],
+      [
+         <code style="color:#e2c211">"Until_newline"</code>,
+         <code style="color:#e2c211">"//"</code>
+      ]
+   ]
 }</code></pre>
           </div>
         </div>
@@ -992,7 +1081,7 @@
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Note that languages can currently be added and expanded with respect
       to <i>syntactic</i> code structures that Comby recognizes: balanced
-      delimiters, comments, and kinds of string literals. By design, it isn't
+      delimiters, comments, and kinds of string literals. By design, it currently isn't
       possible to further refine the meaning of syntax into keywords or
       high-level structures like functions.</p>
 </div>
@@ -1037,7 +1126,7 @@
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">Temporarily changing or removing code for tests or analyses.
             Stubbing or changing code is useful for suppressing spurious
-            warnings, and in refining static analyses or fuzzing.</p>
+            warnings, and for refining static analyses or fuzzing.</p>
 </div>
 </div>
           </div>
