--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
     <!-- Custom fonts for this theme -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
     <link href="css/freelancer.min.css" rel="stylesheet">
 
     <!-- Source Sans Pro font -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon/">
 
@@ -507,7 +506,7 @@
         <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead"><code class="hl-bg-source"><code style="color:orange">:[hole\n]</code></code> (with a <code>\n</code> at the end) matches one or more
-        characters up to a newline.</p>
+        characters up to a newline, including the newline.</p>
 </div>
 </div>
 
@@ -516,7 +515,7 @@
 <p class="lead"><code class="hl-bg-source"><code style="color:orange">:[ ]</code></code> (with a space) matches only whitespace
         characters, excluding newlines. To assign the matched whitespace to
         variable, put the variable name after the space, like <code style="color:orange">:[
-        white]</code>.</p>
+        hole]</code>.</p>
 </div>
 </div>
 
