--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
 <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead">A <code class="hl-bg-source">rewrite { ... }</code> expression can rewrite syntax captured in a hole. This is useful for rewriting reptitions of a pattern. This example converts arguments of a <code>dict</code> to a JSON-like format, where <code class="hl-bg-source">dict(foo=bar,baz=qux)</code> becomes <code class="hl-bg-source">{"foo": bar, "baz": qux}</code>:</p>
+<p class="lead">A <code class="hl-bg-source">rewrite { ... }</code> expression can rewrite syntax captured in a hole. This is useful for rewriting repetitions of a pattern. This example converts arguments of a <code>dict</code> to a JSON-like format, where <code class="hl-bg-source">dict(foo=bar,baz=qux)</code> becomes <code class="hl-bg-source">{"foo": bar, "baz": qux}</code>:</p>
 </div>
 </div>
 
