--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Comby is a tool for structural code search and replace that supports ~every
+language. It lets developers write simple patterns to more intelligently change
+code compared to standard regex approaches.">
+    <meta name="author" content="Rijnard van Tonder">
 
     <title>Comby〔 Rewrite Code 〕</title>
 
@@ -839,7 +841,12 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 </div>
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code class="hl-bg-rewrite">bash <(curl -sL get.comby.dev)</code> (Binary for Ubuntu Linux and Mac)</p>
+<p class="lead"><code class="hl-bg-rewrite">brew install comby</code> (Mac OS X)</p>
+</div>
+</div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead"><code class="hl-bg-rewrite">bash <(curl -sL get.comby.dev)</code> (Ubuntu Linux)</p>
 </div>
 </div>
       <div class="row">
@@ -847,11 +854,16 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 <p class="lead"><code class="hl-bg-rewrite">docker pull comby/comby</code> (Docker)</p>
 </div>
 </div>
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead">See the GitHub project for others or to <a href="https://github.com/comby-tools/comby/#build-from-source" class="inline-a">build from source</a>.</p>
+</div>
+</div>
 
       <div class="row">
 <div class="col-sm-8 offset-sm-2">
 <p class="lead">All the examples on <a href="https://comby.live" class="inline-a">comby.live</a> and in the <a href="https://catalog.comby.dev" class="inline-a">catalog</a> are just a copy away
-      from working on your command-line (just click on terminal).</p>
+      from working on your command-line (just click on terminal in <a href="https://comby.live" class="inline-a">comby.live</a>).</p>
 </div>
 </div>
 
@@ -922,7 +934,7 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>comby 'match <code><span class="hole">:[template]</span></code>' 'rewrite <code><span class="hole">:[template]</span></code>' .go</code></pre>
+<pre class="source"><code>comby 'foo <code><span class="hole">:[template]</span></code>' 'bar <code><span class="hole">:[template]</span></code>' .go</code></pre>
           </div>
         </div>
 
@@ -943,7 +955,7 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>comby 'match <code><span class="hole">:[template]</span></code>' 'rewrite <code><span class="hole">:[template]</span></code>' .go -i</code></pre>
+<pre class="source"><code>comby 'foo <code><span class="hole">:[template]</span></code>' 'bar <code><span class="hole">:[template]</span></code>' .go -i</code></pre>
           </div>
         </div>
 
@@ -963,7 +975,7 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>comby 'match <code><span class="hole">:[template]</span></code>' 'rewrite <code><span class="hole">:[template]</span></code>' .go -rule 'where <code><span class="hole">:[template]</span></code> == <code style="color:#e2c211">"main"</code>'</code></pre>
+<pre class="source"><code>comby 'foo <code><span class="hole">:[template]</span></code>' 'bar <code><span class="hole">:[template]</span></code>' .go -rule 'where <code><span class="hole">:[template]</span></code> == <code style="color:#e2c211">"main"</code>'</code></pre>
           </div>
         </div>
 
@@ -983,7 +995,7 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>comby 'match <code><span class="hole">:[template]</span></code>' 'rewrite <code><span class="hole">:[template]</span></code>' file.go -d foo</code></pre>
+<pre class="source"><code>comby 'foo <code><span class="hole">:[template]</span></code>' 'bar <code><span class="hole">:[template]</span></code>' file.go -d foo</code></pre>
           </div>
         </div>
 
@@ -1003,7 +1015,7 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 
         <div class="row">
           <div class="col-sm-8 offset-sm-2 mb-3">
-<pre class="source"><code>comby 'match <code><span class="hole">:[template]</span></code>' 'rewrite <code><span class="hole">:[template]</span></code>' .txt -matcher .js</code></pre>
+<pre class="source"><code>comby 'foo <code><span class="hole">:[template]</span></code>' 'bar <code><span class="hole">:[template]</span></code>' .txt -matcher .js</code></pre>
           </div>
         </div>
 
@@ -1042,6 +1054,44 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
 @@ -1,1 +1,1 @@
 -foo(a, b)
 +bar(b, a)</code></pre>
+          </div>
+        </div>
+
+      <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active">
+  <a href="#review-mode"><i class="fas fa-link anchor-side-link"></i><p class="lead" id="review-mode"><code style="color:orange">Interactively review changes on the command line, just like in <a href="https://github.com/facebook/codemod" class="inline-a"><u>codemod</u></a></code></p>
+  </a>
+</div>
+</div>
+</div>
+
+        <div class="row">
+          <div class="col-sm-8 offset-sm-2 mb-3">
+
+
+<pre class="source"><code>comby 'foo(<code><span class="hole">:[1]</span></code>, <code><span class="hole">:[2]</span></code>)' 'bar(<code><span class="hole">:[2]</span></code>, <code><span class="hole">:[1]</span></code>)' sub.js -review</code></pre>
+          </div>
+        </div>
+
+<div class="row">
+<div class="col-sm-8 offset-sm-2">
+<p class="lead">Output:</p>
+</div>
+</div>
+
+        <div class="row">
+          <div class="col-sm-8 offset-sm-2 mb-3">
+
+<pre class="diff"><code><code style="color:red">------ sub.js</code>
+<code style="color:#13b313">++++++ sub.js</code>
+<code style="color:gray">@|</code>-1,3 +1,3 ============================================================
+<code style="background-color:red">-|</code><code style="color:gray">function subtract</code>(<code style="color:red">param1</code><code style="color:gray">,</code> <code style="color:red">param2</code>) <code style="color:gray">{ <!--}--></code>
+<code style="background-color:#13b313">+|</code>function subtract(<code style="color:#13b313">param2</code>, <code style="color:#13b313">param1</code>) { <!--}-->
+<code style="color:gray"> |</code>  return param1 - param2;
+<code style="color:gray"> |</code><!--{-->}
+Accept change (<code style="color:#13b313">y = yes</code> [default], <code style="color:red">n = no</code>, <code style="color:yellow">e = edit original</code>, <code style="color:yellow">E = apply+edit</code>, q = quit)?</code></pre>
+
           </div>
         </div>
 
@@ -1116,9 +1166,10 @@ rewrite <code><span class="hole">:[args]</span></code> {  ": <code style="color:
           <div class="col-sm-10 offset-sm-1 mb-3">
             <div class="row">
 <div class="col-sm-8 offset-sm-2">
-<p class="lead"><code>Assembly, Bash, C/C++, C#, Clojure, CSS, Dart, Elm, Elixir, Erlang,
-            Fortran, F#, Go, Haskell, HTML/XML, Java, Javascript/Typescript, JSON,
-            Julia, LaTeX, Lisp, OCaml, Pascal, PHP, Python, Ruby, Rust, Scala, SQL, Swift, Text</code></p>
+<p class="lead"><code>Assembly, Bash, C/C++, C#, Clojure, CSS, Dart, Elm, Elixir,
+            Erlang, Fortran, F#, Go, Haskell, HTML/XML, Java, Javascript, JSX,
+            JSON, Julia, LaTeX, Lisp, Nim, OCaml, Pascal, PHP, Python, Reason,
+            Ruby, Rust, Scala, SQL, Swift, Plain Text, TSX, Typescript</code></p>
 </div>
 </div>
           </div>
@@ -1371,22 +1422,16 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
 <p class="lead">Pop in at the <a href="https://gitter.im/comby-tools/community" class="inline-a">Gitter channel</a> for more support.</p>
 </div>
 </div>
-
-
-
-      <!--
-      <div class="row">
+        <!--<div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
   <a href="#what-about-regex"><i class="fas fa-link anchor-side-link"></i><h6 id="what-about-regex">How does Comby compare to Regex?</h6>
   </a>
 </div>
 </div>
-</div>
-
-      <!--https://stackoverflow.com/questions/133601/can-regular-expressions-be-used-to-match-nested-patterns}-->
-
-      <!--<div class="row">
+</div>-->
+        <!--https://stackoverflow.com/questions/133601/can-regular-expressions-be-used-to-match-nested-patterns}-->
+        <!--<div class="row">
 <div class="col-sm-8 offset-sm-2">
 <div class="anchor-header is-active mt-3">
   <a href="#language-support"><i class="fas fa-link anchor-side-link"></i><h6 id="language-support">What about supporting Regex inside holes?</h6>
@@ -1394,7 +1439,57 @@ if (scanf("%d&rpar; %d", &x, &y) == 2) // 2&rpar; if (scanf("%d&rpar; %d", &x, &
 </div>
 </div>
 </div>-->
+  </section>
 
+  <!-- Resources and Demos -->
+  <section class="page-section" id="Resources and demos">
+    <div class="container">
+
+      <!-- Section Heading -->
+      <h2 class="page-section-heading text-center">Resources and demos</h2>
+
+      <!-- Line -->
+      <div class="d-flex align-items-center flex-column">
+        <div class="divider-line"></div>
+      </div>
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active mt-3">
+  <a href="#strangeloop-talk"><i class="fas fa-link anchor-side-link"></i><h6 id="strangeloop-talk">Strangeloop talk on comby</h6>
+  </a>
+</div>
+</div>
+</div>
+          </div>
+          <div class="col-sm-12 text-center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JMZLBB_BFNg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <div class="row">
+<div class="col-sm-8 offset-sm-2">
+<div class="anchor-header is-active mt-3">
+  <a href="#twitter-demos"><i class="fas fa-link anchor-side-link"></i><h6 id="twitter-demos">Demos</h6>
+  </a>
+</div>
+</div>
+</div>
+          </div>
+          <div class="col-sm-6">
+<blockquote class="twitter-tweet" data-theme="dark" data-link-color="#FAB81E"><p lang="en" dir="ltr">A demo of how it&#39;s possible to support future rewrites for proposed syntax extensions like optional chaining in ES/JS. This just one syntactic variant of course; the fun part is how it&#39;s possible to support new syntax changes on concrete syntax trees even before it&#39;s adopted. <a href="https://t.co/jQuhNeTmXA">https://t.co/jQuhNeTmXA</a> <a href="https://t.co/ZzaAXHsLqK">pic.twitter.com/ZzaAXHsLqK</a></p>&mdash; Rijnard van Tonder (@rvtond) <a href="https://twitter.com/rvtond/status/1174433049322414081?ref_src=twsrc%5Etfw">September 18, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <div class="col-sm-6">
+<blockquote class="twitter-tweet" data-theme="dark" data-link-color="#FAB81E"><p lang="en" dir="ltr">Here&#39;s a declarative way to rewrite a list concat of strings using an infix operator in <a href="https://twitter.com/hashtag/Haskell?src=hash&amp;ref_src=twsrc%5Etfw">#Haskell</a> instead (this change inspired by a HLint check). Replace repeated patterns like &#39;,&#39; with &#39;++&#39;, but only inside a list. Hear more tomorrow @ 1:30PM ST Ovation <a href="https://twitter.com/strangeloop_stl?ref_src=twsrc%5Etfw">@strangeloop_stl</a> <a href="https://t.co/hIxO8uFRHV">pic.twitter.com/hIxO8uFRHV</a></p>&mdash; Rijnard van Tonder (@rvtond) <a href="https://twitter.com/rvtond/status/1172620504106250242?ref_src=twsrc%5Etfw">September 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Copyright Section -->
